--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 	<h1><span class="tangerine">
 	介绍一个PS插件svgArtisan（主页），这个工具可以直接根据PSD的路径图层生成SVG图形。
 接下来就简单了，将设计稿上的路径图形用插件生成对应的SVG.</span></h1>
+<a href="https://isux.tencent.com/play-with-html5-animate.html">玩转HTML5移动页面(动效篇)/fonts/</a>
 </body>
 </html>
